# SetOps

./: .gitignore  CMakeLists.txt  README.md
lib/: dbg.h  utils.h
lib/client/: verify_difference.h  verify_intersection.h  verify_subset.h  verify_tree.h  verify_union.h
lib/server/: query.h
lib/source/: genkey.h  setup.h
lib/utils/: dbg.h  merkletree.h  querytree.h  utils.h
plots/: Intersection-query.txt  Intersection-query2.txt  Intersection-verify.txt  Intersection-verify2.txt  Union_query.txt  Union_query2.txt  difference-query.txt  query_time_first_optimization.txt  setup_running_time.txt  subset-query.txt  update_time.txt
src/: CMakeLists.txt  main.cpp
src/client/: verify_difference.cpp  verify_intersection.cpp  verify_intersection.h  verify_subset.cpp  verify_tree.cpp  verify_union.cpp
src/server/: query.cpp  query.h
src/source/: genkey.cpp  genkey.h  setup.cpp  setup.h
src/utils/: merkletree.cpp  utils.cpp  utils.h
test/: CMakeCache.txt  CMakeLists.txt  Intersection.cpp  Makefile  cmake_install.cmake  genkey.cpp  setup.cpp  test.cpp
test/gtest/src/gtest-stamp/: download-gtest.cmake  extract-gtest.cmake
test/tests/: CMakeLists.txt  Intersection.cpp  Makefile  cmake_install.cmake  difference.cpp  intersection.cpp  setup.cpp  subset.cpp  test.cpp  union.cpp  union2.cpp
